Fixed spacing issue.

--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -13,6 +13,6 @@ nav a {
 	text-decoration: none;
 	background: #0006;
 	border: 1px solid #fff6;
-	margin: 1rem;
+	margin: 0.5rem 1rem;
 	padding: 0.5em;
 }
